# git-stalker

./: .gitignore  LICENSE  README.md  git_stalker.py  hello.py  pyproject.toml  python hello.py track-activity <username> <organization>  python hello.py track-activity octocat github  requirements.txt
demo/: demo.tape
git_stalker/cli/: __init__.py  main.py
git_stalker/core/: base.py  github.py  logging.py
src/: config.py
src/cli/: main.py
src/core/: __init__.py  github.py
tests/: __init__.py  test_github_tracker.py
